Conexion Client-Server Para el Grafo
La conexion cliente-servidor permite crear el grafo, agregar vertices, aristas y calcular la ruta minima de un vertice a otro, todo esto por medio de comando que envia el cliente al server.

--- a/Grafo/CMakeLists.txt
+++ b/Grafo/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Grafo)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Grafo grafo/main.cpp grafo/Vertice.cpp grafo/Vertice.h grafo/Arista.cpp grafo/Arista.h grafo/Grafo.cpp grafo/Grafo.h)
+add_executable(Grafo grafo/main.cpp grafo/Vertice.cpp grafo/Vertice.h grafo/Arista.cpp grafo/Arista.h grafo/Grafo.cpp grafo/Grafo.h )
+add_executable(Server SocketServer/Server.cpp grafo/Vertice.cpp grafo/Vertice.h grafo/Arista.cpp grafo/Arista.h grafo/Grafo.cpp grafo/Grafo.h)
+add_executable(Client SocketServer/Client.cpp )
